ADDED IMAGES TO PAGE 3
gojo portrait + cesu

--- a/page3.html
+++ b/page3.html
@@ -141,7 +141,10 @@
     <img src = "img17.png" onclick="openFullImg(this.src)">
     <img src = "jesus (1).png" onclick="openFullImg(this.src)">
     <img src = "img18.png" onclick="openFullImg(this.src)">
+    <img src = "img13.png" onclick="openFullImg(this.src)">
     <img src = "jesus (2).png" onclick="openFullImg(this.src)">
+    <img src = "img11.png" onclick="openFullImg(this.src)">
+    <img src = "cha.png" onclick="openFullImg(this.src)">
 </div>
 
 <h3> instagram: @nnaegis </h3>
