--- a/artist.html
+++ b/artist.html
@@ -109,14 +109,24 @@
 
 .content h1 {
     font-size: 60px;
+    margin: 160px auto 0;
 
 }
 .content h3{
     width: 80%;
-    margin: 20px auto 100px;
+    margin: 40px auto 0;
     font-weight: 100;
     line-height:25px;
 
+}
+
+.content h2{
+    width: 60%;
+    margin: 40px auto 0;
+    text-align: center;
+    color: #fff;
+    position: relative;
+    top: 0;
 }
 
 button {
@@ -179,14 +189,6 @@ tbody tr:hover {
   background: #b6a71f;
 }
 
-.content h2{
-    width: 60%;
-    margin: 160px auto 0;
-    text-align: center;
-    color: #fff;
-    position: relative;
-    top: 0;
-}
 
 
 
@@ -200,7 +202,7 @@ tbody tr:hover {
         <div class="overlay">
             <div class="navbar">
                 <div class="logo">
-                    <img src = "logo.png">
+                    <a href="index.html"><img src = "logo.png"></a>
                 </div>
                 <div class="menu-icons">
                     <a href="index.html"> <img src = "home.png"> </a>
