--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@ button:hover{
         <div class="overlay">
             <div class="navbar">
                 <div class="logo">
-                    <img src = "logo.png">
+                    <a href="artist.html"><img src = "logo.png"></a>
                 </div>
                 <div class="menu-icons">
                     <a href="index.html"> <img src = "home.png"> </a>
