--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NAEGIS PORTFOLIO</title>
+    <link rel="shortcut icon" type="image/png" href="scara.png">
 </head>
 
 <style type="text/css">
@@ -30,6 +31,8 @@
     width: 100%;
     height: 100vh;
     position: absolute;
+    display: inline-block;
+    overflow: hidden;
     top: 0;
 
 
@@ -40,6 +43,7 @@
     height: 100%;
     object-fit: cover;
     animation: zoom-out 6s linear infinite;
+    position: relative;
 }
 
 @keyframes zoom-out {
@@ -118,6 +122,8 @@
     line-height:25px;
 
 }
+
+
 
 button {
     width: 100px;
