--- a/page2.html
+++ b/page2.html
@@ -104,6 +104,11 @@
         color:#ffffffd2;
     }
 
+    h3{
+        text-align: center;
+        color:#353535;
+    }
+
 
 </style>
 
@@ -111,7 +116,7 @@
 
     <div class="navbar">
         <div class="logo">
-            <img src = "logo.png">
+            <a href="index.html"><img src = "logo.png"></a>
         </div>
         <div class="menu-icons">
             <a href="index.html"> <img src = "home.png"> </a>
