--- a/page1.html
+++ b/page1.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>NAEGIS</title>
+  <link rel="shortcut icon" type="image/png" href="scara.png">
   <link href="style.css" rel="stylesheet" type="text/css" />
 
 </head>
@@ -12,10 +13,9 @@
 <style type="text/css">
 
 
-    * {
+    html {
         font-family: sans-serif;;
-        background-color:#1a1919;
-
+        background:radial-gradient(ellipse at bottom, #000000 0%, #1a160b 100%);
     }
 
     .navbar{
@@ -109,7 +109,6 @@
         color:#353535;
     }
 
-
 </style>
 
 <body>
@@ -120,12 +119,14 @@
         </div>
         <div class="menu-icons">
             <a href="index.html"> <img src = "home.png"> </a>
-            <a href="page2.html"> <img src = "next.png"> </a>
+            <a href="page2.html"> <img src = "back.png"> </a>
+            <a href="page3.html"> <img src = "next.png"> </a>
             <a href="artist.html"> <img src = "artist.png"> </a>
         </div>
     </div>
 
 <h1> <span class="h1color"> all </span>  | ARTWORKS </h1>
+
 
 
 
@@ -173,6 +174,10 @@
     <img src = "img12.png" onclick="openFullImg(this.src)">
 </div>
 
+<section class="wrapper">
+
+</section>
+
 <h3> instagram: @nnaegis </h3>
 
 <script>
@@ -190,6 +195,7 @@
     }
 
 </script>
+
 
 </body>
 
