--- a/page3.html
+++ b/page3.html
@@ -5,16 +5,16 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>NAEGIS</title>
+  <link rel="shortcut icon" type="image/png" href="scara.png">
   <link href="style.css" rel="stylesheet" type="text/css" />
 
 </head>
 
 <style type="text/css">
 
-
-    * {
+    html {
         font-family: sans-serif;;
-        background-color:#1a1919;
+        background:radial-gradient(ellipse at bottom, #000000 0%, #1a160b 100%);
 
     }
 
@@ -120,6 +120,7 @@
         </div>
         <div class="menu-icons">
             <a href="index.html"> <img src = "home.png"> </a>
+            <a href="page1.html"> <img src = "back.png"> </a>
             <a href="artist.html"> <img src = "next.png"> </a>
             <a href="artist.html"> <img src = "artist.png"> </a>
         </div>
