--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NAEGIS PORTFOLIO</title>
     <link rel="shortcut icon" type="image/png" href="scara.png">
+    
 </head>
 
 <style type="text/css">
@@ -18,6 +19,7 @@
 
 .h1{
     color: #f8b043;
+    text-align: center;
 }
 .banner {
     width: 100%;
@@ -66,10 +68,18 @@
 .overlay{
     width: 100%;
     height: 100vh;
-    background: linear-gradient(rgba(0,0,0,0.7),rgba(0,0,0,0.7));
-    position: absolute;
+    position: relative;
+    overflow: auto;
     top: 0;
 
+}
+
+.bg {
+    width: 100%;
+    height: 100vh;
+    background: linear-gradient(rgba(0, 0, 0, 0.774),rgba(0, 0, 0, 0.788));
+    position: fixed;
+    top: 0;
 }
 
 .navbar{
@@ -107,12 +117,16 @@
     margin: 160px auto 0;
     text-align: center;
     color: #fff;
-    position: relative;
-    top: 100px;
+    position: sticky;
+    overflow: visible;
+    background-position: center;
+    background-size: cover;
+    top:36%;
 }
 
 .content h1 {
-    font-size: 60px;
+    font-size: 380%;
+    text-align: center;
 
 }
 .content h3{
@@ -122,7 +136,6 @@
     line-height:25px;
 
 }
-
 
 
 button {
@@ -722,6 +735,87 @@ button:hover{
     }
 }
 
+@media screen and (max-width: 600px) and (min-width: 290px) {
+    .content{
+    width: 80%;
+    margin: 10% auto 0;
+    text-align: center;
+    color: #fff;
+    position: sticky;
+    overflow: visible;
+    background-position: center;
+    background-size: cover;
+    top:36%;
+}
+
+.content h1 {
+    font-size: 300%;
+    text-align: center;
+
+}
+.content h3{
+    width: 80%;
+    margin: 20px auto 100px;
+    font-weight: 100;
+    line-height:25px;
+
+}
+
+button {
+    width: 90px;
+    padding: 15px 0;
+    text-align: center;
+    margin: 5px 10px;
+    border-radius: 25px;
+    cursor: pointer;
+    font-weight: bold;
+    background: transparent;
+    border: 2px solid #ffffff;
+    color: #fff;
+    transition: background 0.5s;
+}
+
+.overlay{
+    width: 100%;
+    height: 100vh;
+    position: relative;
+    overflow: auto;
+    top: 0;
+
+}
+
+.navbar{
+    width: 85%;
+    display: flex;
+    align-items: center;
+    margin: 35px auto;
+
+}
+
+.logo {
+    flex-basis: 15%
+}
+
+.logo img{
+    width: 90px;
+    cursor: pointer;
+}
+
+
+.menu-icons{
+    flex: 1;
+    align-items: center;
+    text-align: right;
+}
+
+.menu-icons img{
+    width: 20px;
+    margin-left: 20px;
+    cursor: pointer;
+}
+
+}
+
 
 </style>
 <body onload="slider()">
@@ -735,6 +829,7 @@ button:hover{
         <div id="stars2"></div>
         <div id="stars3"></div>
 
+        <div class="bg"></div>
 
         <div class="overlay">
             <div class="navbar">
@@ -755,6 +850,8 @@ button:hover{
                 <a href="page2.html"> <button type="button">FANART</button> </a>
                 <a href="page1.html"> <button type="button" id="btn2">ALL</button> </a>
                 <a href="page3.html"> <button type="button">PORTRAIT</button> </a>
+
+                <br><br><br><br><br><br>
             </div>
             
             </div>
