changed buttons, optimized for media screens

--- a/page2.html
+++ b/page2.html
@@ -108,6 +108,39 @@
         color:#353535;
     }
 
+    @media screen and (max-width: 600px) and (min-width: 290px) {
+
+.navbar{
+    width: 85%;
+    display: flex;
+    align-items: center;
+    margin: 35px auto;
+
+}
+
+.logo {
+    flex-basis: 15%
+}
+
+.logo img{
+    width: 90px;
+    cursor: pointer;
+}
+
+
+.menu-icons{
+    flex: 1;
+    align-items: center;
+    text-align: right;
+}
+
+.menu-icons img{
+    width: 20px;
+    margin-left: 20px;
+    cursor: pointer;
+}
+
+}
 
 </style>
 
@@ -119,7 +152,6 @@
         </div>
         <div class="menu-icons">
             <a href="index.html"> <img src = "home.png"> </a>
-            <a href="index.html"> <img src = "back.png"> </a>
             <a href="page1.html"> <img src = "next.png"> </a>
             <a href="artist.html"> <img src = "artist.png"> </a>
         </div>
