added lists, hyperlink

--- a/artist.html
+++ b/artist.html
@@ -898,10 +898,10 @@ td {
                     I started to try digital art in the middle of 2021, when I started SHS<br>
                     I bought a pen tablet for fun and things just escalated from there. 
                     I like to do fan arts, but drawing portraits of people is also fun. <br><br>
-                    If you're interested in commissioning me, hmu <a href="https://www.instagram.com/nnaegis/"><i>@nnaegis</i> on Instagram!
+                    If you're interested in commissioning me, hmu <a href="https://www.instagram.com/nnaegis/"><i>@nnaegis</i></a> on Instagram!
 
                 </h3>
-                    
+                    <hr>
                 <h2> Commission Table</h2> <br>
                 <table>
                 <thead>
@@ -967,7 +967,7 @@ td {
                 </tbody>
               </table>
               <br>
-                       <hr>
+                       
                     <h2>
                         Things I am willing to do:
                     </h2>
