--- a/page1.html
+++ b/page1.html
@@ -176,6 +176,7 @@
     <img src = "img1.jpg" onclick="openFullImg(this.src)">
     <img src = "img2.png" onclick="openFullImg(this.src)">
     <img src = "img3.png" onclick="openFullImg(this.src)">
+    <img src = "reneee.png" onclick="openFullImg(this.src)">
     <img src = "img4.png" onclick="openFullImg(this.src)">
     <img src = "img5.png" onclick="openFullImg(this.src)">
     <img src = "img6.png" onclick="openFullImg(this.src)">
