--- a/page3.html
+++ b/page3.html
@@ -172,6 +172,7 @@
 <div class="img-gallery">
     <img src = "img2.png" onclick="openFullImg(this.src)">
     <img src = "img4.png" onclick="openFullImg(this.src)">
+    <img src = "reneee.png" onclick="openFullImg(this.src)">
     <img src = "colls.png" onclick="openFullImg(this.src)">
     <img src = "img25.png" onclick="openFullImg(this.src)">
     <img src = "img15.png" onclick="openFullImg(this.src)">
