--- a/page3.html
+++ b/page3.html
@@ -11,7 +11,7 @@
 </head>
 
 <style type="text/css">
-
+a {display: inline-block}
     html {
         font-family: sans-serif;;
         background:radial-gradient(ellipse at bottom, #000000 0%, #1a160b 100%);
@@ -54,7 +54,7 @@
         grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
         grid-gap: 20px;
     }
-    
+
     .img-gallery img{
         width: 100%;
         cursor: pointer;
@@ -73,7 +73,7 @@
     .full-img {
         width: 100%;
         height: 100vh;
-        backdrop-filter: blur(20px); 
+        backdrop-filter: blur(20px);
         position: fixed;
         top: 0;
         left: 0;
@@ -93,7 +93,7 @@
         font-size: 30px;
         color: #ffffff;
         cursor: pointer;
-    } 
+    }
     h1 {
         padding: 3%;
         text-align: center;
@@ -165,7 +165,7 @@
 <div class="full-img" id="fullImgBox">
         <img src = "img1.jpg" id="fullImg">
         <span onclick="closeFullImg()">X</span>
-</div> 
+</div>
 
 
 
