--- a/page2.html
+++ b/page2.html
@@ -1,221 +1,227 @@
 <!DOCTYPE html>
 <html>
 
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>NAEGIS</title>
-  <link rel="shortcut icon" type="image/png" href="scara.png">
-  <link href="style.css" rel="stylesheet" type="text/css" />
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>NAEGIS</title>
+        <link rel="shortcut icon" type="image/png" href="scara.png">
+        <link href="style.css" rel="stylesheet" type="text/css" />
 
-</head>
+    </head>
 
-<style type="text/css">
-a {display: inline-block}
+    <style type="text/css">
+        a {
+            display: inline-block
+        }
 
-    html {
-        font-family: sans-serif;;
-        background:radial-gradient(ellipse at bottom, #000000 0%, #1a160b 100%);
-    }
+        html {
+            font-family: sans-serif;
+            ;
+            background: radial-gradient(ellipse at bottom, #000000 0%, #1a160b 100%);
+        }
 
-    .navbar{
-    width: 85%;
-    display: flex;
-    align-items: center;
-    margin: 35px auto;
+        .navbar {
+            width: 85%;
+            display: flex;
+            align-items: center;
+            margin: 35px auto;
 
-}
+        }
 
-.logo {
-    flex-basis: 15%
-}
+        .logo {
+            flex-basis: 15%
+        }
 
-.logo img{
-    width: 120px;
-    cursor: pointer;
-}
+        .logo img {
+            width: 120px;
+            cursor: pointer;
+        }
 
-.menu-icons{
-    flex: 1;
-    align-items: center;
-    text-align: right;
-}
+        .menu-icons {
+            flex: 1;
+            align-items: center;
+            text-align: right;
+        }
 
-.menu-icons img{
-    width: 20px;
-    margin-left: 40px;
-    cursor: pointer;
-}
+        .menu-icons img {
+            width: 20px;
+            margin-left: 40px;
+            cursor: pointer;
+        }
 
-    .img-gallery {
-        width: 80%;
-        margin: 50px auto 20px;
-        display: grid;
-        grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-        grid-gap: 20px;
-    }
+        .img-gallery {
+            width: 80%;
+            margin: 50px auto 20px;
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+            grid-gap: 20px;
+        }
 
-    .img-gallery img{
-        width: 100%;
-        cursor: pointer;
-        border-style: solid;
-        border-color:#201f1f44;
-        border-width: 1px;
-        border-radius: 20px;
-    }
-    .img-gallery img:hover {
-        transform: scale(1.10);
-        filter: brightness(70%);
-        transition: 0.15s ease-in-out;
-        border-radius: 10px;
-        box-shadow: 0 32px 7 px rgba(68,77,136,0.22);
-    }
-    .full-img {
-        width: 100%;
-        height: 100vh;
-        backdrop-filter: blur(20px);
-        position: fixed;
-        top: 0;
-        left: 0;
-        display: none;
-        align-items: center;
-        justify-content: center;
-        z-index: 100;
-    }
-    .full-img img {
-        width: 90%;
-        max-width: 700px;
-    }
-    .full-img span{
-        position: absolute;
-        top: 5%;
-        right: 5%;
-        font-size: 30px;
-        color: #ffffff;
-        cursor: pointer;
-    }
-    h1 {
-        padding: 3%;
-        text-align: center;
-        color: #fea450;
-        size: 1000px;
-    }
-    h1 .h1color {
-        color:#ffffffd2;
-    }
+        .img-gallery img {
+            width: 100%;
+            cursor: pointer;
+            border-style: solid;
+            border-color: #201f1f44;
+            border-width: 1px;
+            border-radius: 20px;
+        }
 
-    h3{
-        text-align: center;
-        color:#353535;
-    }
+        .img-gallery img:hover {
+            transform: scale(1.10);
+            filter: brightness(70%);
+            transition: 0.15s ease-in-out;
+            border-radius: 10px;
+            box-shadow: 0 32px 7 px rgba(68, 77, 136, 0.22);
+        }
 
-    @media screen and (max-width: 600px) and (min-width: 290px) {
+        .full-img {
+            width: 100%;
+            height: 100vh;
+            backdrop-filter: blur(20px);
+            position: fixed;
+            top: 0;
+            left: 0;
+            display: none;
+            align-items: center;
+            justify-content: center;
+            z-index: 100;
+        }
 
-.navbar{
-    width: 85%;
-    display: flex;
-    align-items: center;
-    margin: 35px auto;
+        .full-img img {
+            width: 90%;
+            max-width: 700px;
+        }
 
-}
+        .full-img span {
+            position: absolute;
+            top: 5%;
+            right: 5%;
+            font-size: 30px;
+            color: #ffffff;
+            cursor: pointer;
+        }
 
-.logo {
-    flex-basis: 15%
-}
+        h1 {
+            padding: 3%;
+            text-align: center;
+            color: #fea450;
+            size: 1000px;
+        }
 
-.logo img{
-    width: 90px;
-    cursor: pointer;
-}
+        h1 .h1color {
+            color: #ffffffd2;
+        }
+
+        h3 {
+            text-align: center;
+            color: #353535;
+        }
+
+        @media screen and (max-width: 600px) and (min-width: 290px) {
+
+            .navbar {
+                width: 85%;
+                display: flex;
+                align-items: center;
+                margin: 35px auto;
+
+            }
+
+            .logo {
+                flex-basis: 15%
+            }
+
+            .logo img {
+                width: 90px;
+                cursor: pointer;
+            }
 
 
-.menu-icons{
-    flex: 1;
-    align-items: center;
-    text-align: right;
-}
+            .menu-icons {
+                flex: 1;
+                align-items: center;
+                text-align: right;
+            }
 
-.menu-icons img{
-    width: 20px;
-    margin-left: 20px;
-    cursor: pointer;
-}
+            .menu-icons img {
+                width: 20px;
+                margin-left: 20px;
+                cursor: pointer;
+            }
 
-}
+        }
+    </style>
 
-</style>
+    <body>
 
-<body>
-
-    <div class="navbar">
-        <div class="logo">
-            <a href="index.html"><img src = "logo.png"></a>
+        <div class="navbar">
+            <div class="logo">
+                <a href="index.html"><img src="logo.png"></a>
+            </div>
+            <div class="menu-icons">
+                <a href="index.html"> <img src="home.png"> </a>
+                <a href="page1.html"> <img src="next.png"> </a>
+                <a href="artist.html"> <img src="artist.png"> </a>
+            </div>
         </div>
-        <div class="menu-icons">
-            <a href="index.html"> <img src = "home.png"> </a>
-            <a href="page1.html"> <img src = "next.png"> </a>
-            <a href="artist.html"> <img src = "artist.png"> </a>
+
+        <h1> <span class="h1color"> fanarts </span> | ARTWORKS </h1>
+
+
+
+        <div class="full-img" id="fullImgBox">
+            <img src="img1.jpg" id="fullImg">
+            <span onclick="closeFullImg()">X</span>
         </div>
-    </div>
-
-<h1> <span class="h1color"> fanarts </span>  | ARTWORKS </h1>
 
 
 
-<div class="full-img" id="fullImgBox">
-        <img src = "img1.jpg" id="fullImg">
-        <span onclick="closeFullImg()">X</span>
-</div>
+        <div class="img-gallery">
+            <img src="zhongli.png" onclick="openFullImg(this.src)">
+            <img src="img1.jpg" onclick="openFullImg(this.src)">
+            <img src="img3.png" onclick="openFullImg(this.src)">
+            <img src="img5.png" onclick="openFullImg(this.src)">
+            <img src="img6.png" onclick="openFullImg(this.src)">
+            <img src="img7.png" onclick="openFullImg(this.src)">
+            <img src="img8.png" onclick="openFullImg(this.src)">
+            <img src="img9.png" onclick="openFullImg(this.src)">
+            <img src="img14.png" onclick="openFullImg(this.src)">
+            <img src="AKI.png" onclick="openFullImg(this.src)">
+            <img src="img13.png" onclick="openFullImg(this.src)">
+            <img src="img18.png" onclick="openFullImg(this.src)">
+            <img src="img19.png" onclick="openFullImg(this.src)">
+            <img src="img21.png" onclick="openFullImg(this.src)">
+            <img src="img22.png" onclick="openFullImg(this.src)">
+            <img src="img23.png" onclick="openFullImg(this.src)">
+            <img src="img24.png" onclick="openFullImg(this.src)">
+            <img src="img25.png" onclick="openFullImg(this.src)">
+            <img src="img26.jpg" onclick="openFullImg(this.src)">
+            <img src="img27.png" onclick="openFullImg(this.src)">
+            <img src="img28.png" onclick="openFullImg(this.src)">
+            <img src="img29.png" onclick="openFullImg(this.src)">
+            <img src="img30.png" onclick="openFullImg(this.src)">
+            <img src="img31.png" onclick="openFullImg(this.src)">
+            <img src="scara.png" onclick="openFullImg(this.src)">
+            <img src="img12.png" onclick="openFullImg(this.src)">
+        </div>
 
+        <h3> instagram: @nnaegis </h3>
 
+        <script>
+            var fullImgBox = document.getElementById("fullImgBox");
+            var fullImg = document.getElementById("fullImg");
 
-<div class="img-gallery">
-    <img src = "zhongli.png" onclick="openFullImg(this.src)">
-    <img src = "img1.jpg" onclick="openFullImg(this.src)">
-    <img src = "img3.png" onclick="openFullImg(this.src)">
-    <img src = "img5.png" onclick="openFullImg(this.src)">
-    <img src = "img6.png" onclick="openFullImg(this.src)">
-    <img src = "img7.png" onclick="openFullImg(this.src)">
-    <img src = "img8.png" onclick="openFullImg(this.src)">
-    <img src = "img9.png" onclick="openFullImg(this.src)">
-    <img src = "img14.png" onclick="openFullImg(this.src)">
-    <img src = "AKI.png" onclick="openFullImg(this.src)">
-    <img src = "img13.png" onclick="openFullImg(this.src)">
-    <img src = "img18.png" onclick="openFullImg(this.src)">
-    <img src = "img19.png" onclick="openFullImg(this.src)">
-    <img src = "img21.png" onclick="openFullImg(this.src)">
-    <img src = "img22.png" onclick="openFullImg(this.src)">
-    <img src = "img23.png" onclick="openFullImg(this.src)">
-    <img src = "img24.png" onclick="openFullImg(this.src)">
-    <img src = "img25.png" onclick="openFullImg(this.src)">
-    <img src = "img26.jpg" onclick="openFullImg(this.src)">
-    <img src = "img27.png" onclick="openFullImg(this.src)">
-    <img src = "img28.png" onclick="openFullImg(this.src)">
-    <img src = "img29.png" onclick="openFullImg(this.src)">
-    <img src = "img30.png" onclick="openFullImg(this.src)">
-    <img src = "img31.png" onclick="openFullImg(this.src)">
-    <img src = "scara.png" onclick="openFullImg(this.src)">
-    <img src = "img12.png" onclick="openFullImg(this.src)">
-</div>
+            function openFullImg(pic) {
+                fullImgBox.style.display = "flex";
+                fullImg.src = pic;
+            }
 
-<h3> instagram: @nnaegis </h3>
+            function closeFullImg() {
+                fullImgBox.style.display = "none";
+            }
+        </script>
 
-<script>
-
-    var fullImgBox = document.getElementById("fullImgBox");
-    var fullImg = document.getElementById("fullImg");
-
-    function openFullImg(pic){
-        fullImgBox.style.display = "flex";
-        fullImg.src = pic;
-    }
-
-    function closeFullImg(){
-        fullImgBox.style.display = "none";
-    }
-
-</script>
-
-</body>
+    </body>
 
 </html>
