Thu, Aug 10, 2023, 5:27 PM +08:00

--- a/page1.html
+++ b/page1.html
@@ -178,7 +178,7 @@
         </div>
 
 
-
+    <div>
         <div class="img-gallery">
             <img src="zhongli.png" onclick="openFullImg(this.src)">
             <img src="img1.jpg" onclick="openFullImg(this.src)">
@@ -215,6 +215,10 @@
             <img src="img11.png" onclick="openFullImg(this.src)">
             <img src="img12.png" onclick="openFullImg(this.src)">
         </div>
+
+        
+
+    </div>
 
         <section class="wrapper">
 
