Thu, Aug 10, 2023, 5:30 PM +08:00

--- a/page1.html
+++ b/page1.html
@@ -216,7 +216,8 @@
             <img src="img12.png" onclick="openFullImg(this.src)">
         </div>
 
-        
+        <button class="button" onclick="prev()"> next </button>
+        <button class="button" onclick="next()"> &62 </button>
 
     </div>
 
