Thu, Aug 10, 2023, 5:31 PM +08:00

--- a/page1.html
+++ b/page1.html
@@ -177,8 +177,11 @@
             <span onclick="closeFullImg()">X</span>
         </div>
 
+        <div>
+            <button class="button" onclick="prev()"> prev </button>
+            <button class="button" onclick="next()"> next </button>
+        </div>
 
-    <div>
         <div class="img-gallery">
             <img src="zhongli.png" onclick="openFullImg(this.src)">
             <img src="img1.jpg" onclick="openFullImg(this.src)">
@@ -216,10 +219,9 @@
             <img src="img12.png" onclick="openFullImg(this.src)">
         </div>
 
-        <button class="button" onclick="prev()"> next </button>
-        <button class="button" onclick="next()"> &62 </button>
 
-    </div>
+
+
 
         <section class="wrapper">
 
