Thu, Aug 10, 2023, 5:37 PM +08:00

--- a/page1.html
+++ b/page1.html
@@ -119,6 +119,14 @@
         }
 
         button {
+            border:none;
+            outline:none;
+            background:#888;
+            padding: 10px 30px;
+            font-size: 20px;
+            color: #ddd;
+            margin: 10 px auto;
+            
 
         }
 
@@ -179,8 +187,6 @@
         <div class="full-img" id="fullImgBox">
             <img src="img1.jpg" id="fullImg">
             <span onclick="closeFullImg()">X</span>
-            <span onclick="prev()"> Prev </span>
-            <span onclick="next()"> Next </span>
         </div>
 
 
