Thu, Aug 10, 2023, 8:08 PM +08:00

--- a/page1.html
+++ b/page1.html
@@ -17,7 +17,6 @@
 
         html {
             font-family: sans-serif;
-            ;
             background: radial-gradient(ellipse at bottom, #000000 0%, #1a160b 100%);
         }
 
@@ -110,7 +109,7 @@
             font-size: 30px;
             color: #ffffff;
             cursor: pointer;
-
+            background: rgb()
 
         }
 
