Thu, Aug 10, 2023, 8:09 PM +08:00

--- a/page1.html
+++ b/page1.html
@@ -109,7 +109,7 @@
             font-size: 30px;
             color: #ffffff;
             cursor: pointer;
-            background: rgb()
+            background: radial-gradient(ellipse at bottom, #000000 0%, #1a160b 100%);
 
         }
 
