Thu, Aug 10, 2023, 8:10 PM +08:00

--- a/page1.html
+++ b/page1.html
@@ -119,8 +119,9 @@
             right: 5%;
             position: absolute;
             font-size: 30px;
-            color: #ffffff;
+            color: #f8b043;
             cursor: pointer;
+            background: radial-gradient(ellipse at bottom, #000000 0%, #1a160b 100%);
         }
 
         h1 {
