--- a/page1.html
+++ b/page1.html
@@ -107,9 +107,9 @@
             left: 5%;
             position: absolute;
             font-size: 30px;
-            color: #ffffff;
+            color: #f8b043;
             cursor: pointer;
-            background: radial-gradient(ellipse at bottom, #000000 0%, #1a160b 100%);
+            background: #1a160b;
 
         }
 
@@ -121,7 +121,7 @@
             font-size: 30px;
             color: #f8b043;
             cursor: pointer;
-            background: radial-gradient(ellipse at bottom, #000000 0%, #1a160b 100%);
+            background: #1a160b;
         }
 
         h1 {
