--- a/page1.html
+++ b/page1.html
@@ -92,7 +92,7 @@
             max-width: 700px;
         }
 
-        .full-img span {
+       .x {
             position: absolute;
             top: 5%;
             right: 5%;
@@ -105,11 +105,12 @@
             color:#ffffff;
             margin: 10 px auto;
             left: 5%;
+            bottom: 10%;
             position: absolute;
-            font-size: 30px;
-            color: #f8b043;
+            font-size:40px;
+            color: #ffffff;
             cursor: pointer;
-            background: #1a160b;
+
 
         }
 
@@ -117,11 +118,12 @@
             color:#ffffff;
             margin: 10 px auto;
             right: 5%;
+            bottom: 10%;
             position: absolute;
-            font-size: 30px;
-            color: #f8b043;
+            font-size: 40px;
+            color: #ffffff;
             cursor: pointer;
-            background: #1a160b;
+
         }
 
         h1 {
@@ -198,9 +200,9 @@
 
         <div class="full-img" id="fullImgBox">
             <img src="img1.jpg" id="fullImg">
-            <span onclick="closeFullImg()">X</span>
-            <button class="prev" onclick="prev()"> < </button>
-            <button class="next" onclick="next()"> > </button>
+            <span class="x" onclick="closeFullImg()">X</span>
+            <span class="prev" onclick="prev()"> < </span>
+            <span class="next" onclick="next()"> > </span>
         </div>
 
 
