--- a/page1.html
+++ b/page1.html
@@ -104,7 +104,7 @@
         .prev {
             color:#ffffff;
             margin: 10 px auto;
-            left: 10%;
+            left: 40%;
             bottom: 10%;
             position: absolute;
             font-size:40px;
@@ -117,7 +117,7 @@
         .next {
             color:#ffffff;
             margin: 10 px auto;
-            right: 10%;
+            right: 40%;
             bottom: 10%;
             position: absolute;
             font-size: 40px;
@@ -201,7 +201,7 @@
         <div class="full-img" id="fullImgBox">
             <img src="img1.jpg" id="fullImg">
             <span class="x" onclick="closeFullImg()">X</span>
-            <span class="prev" onclick="prev()"> < </span>
+            <span class="prev" onclick="prev()">  </span>
             <span class="next" onclick="next()"> > </span>
         </div>
 
