--- a/page1.html
+++ b/page1.html
@@ -104,10 +104,10 @@
         .prev {
             color:#ffffff;
             margin: 10 px auto;
-            left: 40%;
+            left: 30%;
             bottom: 10%;
             position: absolute;
-            font-size:40px;
+            font-size:30px;
             color: #ffffff;
             cursor: pointer;
 
@@ -117,10 +117,10 @@
         .next {
             color:#ffffff;
             margin: 10 px auto;
-            right: 40%;
+            right: 30%;
             bottom: 10%;
             position: absolute;
-            font-size: 40px;
+            font-size: 30px;
             color: #ffffff;
             cursor: pointer;
 
@@ -201,8 +201,8 @@
         <div class="full-img" id="fullImgBox">
             <img src="img1.jpg" id="fullImg">
             <span class="x" onclick="closeFullImg()">X</span>
-            <span class="prev" onclick="prev()">  </span>
-            <span class="next" onclick="next()"> > </span>
+            <span class="prev" onclick="prev()"> ◀ </span>
+            <span class="next" onclick="next()"> ▶ </span>
         </div>
 
 
