Thu, Aug 10, 2023, 8:21 PM +08:00

--- a/page1.html
+++ b/page1.html
@@ -104,8 +104,7 @@
         .prev {
             color:#ffffff;
             margin: 10 px auto;
-            left: 30%;
-            bottom: 10%;
+            left: 2%;
             position: absolute;
             font-size:30px;
             color: #ffffff;
@@ -117,8 +116,7 @@
         .next {
             color:#ffffff;
             margin: 10 px auto;
-            right: 30%;
-            bottom: 10%;
+            right: 2%;
             position: absolute;
             font-size: 30px;
             color: #ffffff;
@@ -201,8 +199,8 @@
         <div class="full-img" id="fullImgBox">
             <img src="img1.jpg" id="fullImg">
             <span class="x" onclick="closeFullImg()">X</span>
-            <span class="prev" onclick="prev()"> ◀ </span>
-            <span class="next" onclick="next()"> ▶ </span>
+            <span class="prev" onclick="prev()"> ◁ </span>
+            <span class="next" onclick="next()"> ▷ </span>
         </div>
 
 
