Thu, Aug 10, 2023, 8:24 PM +08:00

--- a/page1.html
+++ b/page1.html
@@ -99,6 +99,7 @@
             font-size: 30px;
             color: #ffffff;
             cursor: pointer;
+            text-shadow: 2px 2px #1a160b;
         }
 
         .prev {
@@ -109,6 +110,7 @@
             font-size:30px;
             color: #ffffff;
             cursor: pointer;
+            text-shadow: 2px 2px #1a160b;
 
 
         }
@@ -121,6 +123,7 @@
             font-size: 30px;
             color: #ffffff;
             cursor: pointer;
+            text-shadow: 2px 2px #1a160b;
 
         }
 
