--- a/page1.html
+++ b/page1.html
@@ -276,7 +276,9 @@
             }
 
             function next() {
-
+                if ( i >= images.length-1) i = -1;
+                i++;
+                return setImg();
             }
 
             function setImg() {
