--- a/page1.html
+++ b/page1.html
@@ -289,23 +289,21 @@
         <script>
             var fullImgBox = document.getElementById("fullImgBox");
             var fullImg = document.getElementById("fullImg");
-
-            var slider_img = document.querySelector('.slider-img');
             var images = ['zhongli.png', 'img1.jpg', "img2.png", "img3.png", "reneee.png", "img4.png", "img5.png", "img6.png", "img7.png", "img8.png", "img9.png", "img14.png", "AKI.png", "img13.png", "img15.png", "img16.png", "img17.png", "colls.png", "img18.png", "img19.png", "img21.png", "img22.png", "img23.png", "img24.png", "img25.png", "img26.jpg", "img27.png", "img28.png", "img29.png", "img30.png", "img31.png", "scara.png", "img11.png", "img12.png"];
-            var i = 0;
+            var currentIndex = 0;
 
             function prev() {
-                i = (i - 1 + images.length) % images.length;
-                setImg();
+                currentIndex = (currentIndex - 1 + images.length) % images.length;
+                updateFullImg();
             }
 
             function next() {
-                i = (i + 1) % images.length;
-                setImg();
+                currentIndex = (currentIndex + 1) % images.length;
+                updateFullImg();
             }
 
-            function setImg() {
-                slider_img.src = images[i];
+            function updateFullImg() {
+                fullImg.src = images[currentIndex];
             }
 
             function openFullImg(pic) {
@@ -316,6 +314,9 @@
             function closeFullImg() {
                 fullImgBox.style.display = "none";
             }
+
+            // Initially set the first image
+            updateFullImg();
         </script>
 
 
