--- a/page2.html
+++ b/page2.html
@@ -93,13 +93,39 @@
             max-width: 700px;
         }
 
-        .full-img span {
+        .x {
             position: absolute;
             top: 5%;
             right: 5%;
             font-size: 30px;
             color: #ffffff;
             cursor: pointer;
+            text-shadow: 2px 2px #1a160b;
+        }
+
+        .prev {
+            color:#ffffff;
+            margin: 10 px auto;
+            left: 2%;
+            position: absolute;
+            font-size:30px;
+            color: #ffffff;
+            cursor: pointer;
+            text-shadow: 2px 2px #1a160b;
+
+
+        }
+
+        .next {
+            color:#ffffff;
+            margin: 10 px auto;
+            right: 2%;
+            position: absolute;
+            font-size: 30px;
+            color: #ffffff;
+            cursor: pointer;
+            text-shadow: 2px 2px #1a160b;
+
         }
 
         h1 {
@@ -172,11 +198,13 @@
 
         <div class="full-img" id="fullImgBox">
             <img src="img1.jpg" id="fullImg">
-            <span onclick="closeFullImg()">X</span>
+            <span class="x" onclick="closeFullImg()">X</span>
+            <span class="prev" onclick="prev()"> ◁ </span>
+            <span class="next" onclick="next()"> ▷ </span>
         </div>
 
 
-
+    <div class = "slider">
         <div class="img-gallery">
             <img src="zhongli.png" onclick="openFullImg(this.src)">
             <img src="img1.jpg" onclick="openFullImg(this.src)">
@@ -205,6 +233,7 @@
             <img src="scara.png" onclick="openFullImg(this.src)">
             <img src="img12.png" onclick="openFullImg(this.src)">
         </div>
+    </div>
 
         <h3> instagram: @nnaegis </h3>
 
