Thu, Aug 10, 2023, 10:38 PM +08:00

--- a/page1.html
+++ b/page1.html
@@ -283,6 +283,27 @@
 
             // Initially set the first image
             updateFullImg();
+
+            document.onkeydown = checkKey;
+
+            function checkKey(e) {
+
+                e = e || window.event;
+
+                if (e.keyCode == '38') {
+                    // up arrow
+                }
+                else if (e.keyCode == '40') {
+                    // down arrow
+                }
+                else if (e.keyCode == '37') {
+                // left arrow
+                }
+                else if (e.keyCode == '39') {
+                // right arrow
+                }
+
+            }
         </script>
 
 
