Thu, Aug 10, 2023, 11:22 PM +08:00

--- a/page1.html
+++ b/page1.html
@@ -201,7 +201,7 @@
 
         <div class="full-img" id="fullImgBox">
             <img src="img1.jpg" id="fullImg">
-            <span class="x" onclick="closeFullImg()">X</span>
+            <button class="x" onclick="closeFullImg()">X</button>
             <span class="prev" onclick="prev()"> ◁ </span>
             <span class="next" onclick="next()"> ▷ </span>
         </div>
