Thu, Aug 10, 2023, 11:32 PM +08:00

--- a/page1.html
+++ b/page1.html
@@ -276,10 +276,11 @@
             }
 
             function closeFullImg() {
-                fullImgBox.style.display = "none";
                 var currentIndex = 0;
+                fullImgBox.style.display = "none";
+                updateFullImg();
             }
-            
+
             function prev() {
                 currentIndex = (currentIndex - 1 + images.length) % images.length;
                 updateFullImg();
