Thu, Aug 10, 2023, 11:33 PM +08:00

--- a/page2.html
+++ b/page2.html
@@ -265,6 +265,7 @@
 
             function closeFullImg() {
                 fullImgBox.style.display = "none";
+                currentIndex = 0;
             }
 
             // Initially set the first image
