Fri, Aug 11, 2023, 12:02 AM +08:00

--- a/page1.html
+++ b/page1.html
@@ -211,41 +211,42 @@
 
     <div class = "slider">
         <div class="img-gallery">
-            <img src="zhongli.png" onclick="openFullImg(this.src)" class="slider-img">
-            <img src="img1.jpg" onclick="openFullImg(this.src)" class="slider-img">
-            <img src="img2.png" onclick="openFullImg(this.src)" class="slider-img">
-            <img src="img3.png" onclick="openFullImg(this.src)" class="slider-img">
-            <img src="reneee.png" onclick="openFullImg(this.src)" class="slider-img">
-            <img src="img4.png" onclick="openFullImg(this.src)" class="slider-img">
-            <img src="img5.png" onclick="openFullImg(this.src)" class="slider-img">
-            <img src="img6.png" onclick="openFullImg(this.src)" class="slider-img">
-            <img src="img7.png" onclick="openFullImg(this.src)" class="slider-img">
-            <img src="img8.png" onclick="openFullImg(this.src)" class="slider-img">
-            <img src="img9.png" onclick="openFullImg(this.src)" class="slider-img">
-            <img src="img14.png" onclick="openFullImg(this.src)" class="slider-img">
-            <img src="AKI.png" onclick="openFullImg(this.src)" class="slider-img">
-            <img src="img13.png" onclick="openFullImg(this.src)" class="slider-img">
-            <img src="img15.png" onclick="openFullImg(this.src)" class="slider-img">
-            <img src="img16.png" onclick="openFullImg(this.src)" class="slider-img">
-            <img src="img17.png" onclick="openFullImg(this.src)" class="slider-img">
-            <img src="colls.png" onclick="openFullImg(this.src)" class="slider-img">
-            <img src="img18.png" onclick="openFullImg(this.src)" class="slider-img">
-            <img src="img19.png" onclick="openFullImg(this.src)" class="slider-img">
-            <img src="img21.png" onclick="openFullImg(this.src)" class="slider-img">
-            <img src="img22.png" onclick="openFullImg(this.src)" class="slider-img">
-            <img src="img23.png" onclick="openFullImg(this.src)" class="slider-img">
-            <img src="img24.png" onclick="openFullImg(this.src)" class="slider-img">
-            <img src="img25.png" onclick="openFullImg(this.src)" class="slider-img">
-            <img src="img26.jpg" onclick="openFullImg(this.src)" class="slider-img">
-            <img src="img27.png" onclick="openFullImg(this.src)" class="slider-img">
-            <img src="img28.png" onclick="openFullImg(this.src)" class="slider-img">
-            <img src="img29.png" onclick="openFullImg(this.src)" class="slider-img">
-            <img src="img30.png" onclick="openFullImg(this.src)" class="slider-img">
-            <img src="img31.png" onclick="openFullImg(this.src)" class="slider-img">
-            <img src="scara.png" onclick="openFullImg(this.src)" class="slider-img">
-            <img src="img11.png" onclick="openFullImg(this.src)" class="slider-img">
-            <img src="img12.png" onclick="openFullImg(this.src)" class="slider-img">
+            <img src="zhongli.png" onclick="openFullImg(this.src, 0)">
+            <img src="img1.jpg" onclick="openFullImg(this.src, 1)">
+            <img src="img2.png" onclick="openFullImg(this.src, 2)">
+            <img src="img3.png" onclick="openFullImg(this.src, 3)">
+            <img src="reneee.png" onclick="openFullImg(this.src, 4)">
+            <img src="img4.png" onclick="openFullImg(this.src, 5)">
+            <img src="img5.png" onclick="openFullImg(this.src, 6)">
+            <img src="img6.png" onclick="openFullImg(this.src, 7)">
+            <img src="img7.png" onclick="openFullImg(this.src, 8)">
+            <img src="img8.png" onclick="openFullImg(this.src, 9)">
+            <img src="img9.png" onclick="openFullImg(this.src, 10)">
+            <img src="img14.png" onclick="openFullImg(this.src, 11)">
+            <img src="AKI.png" onclick="openFullImg(this.src, 12)">
+            <img src="img13.png" onclick="openFullImg(this.src, 13)">
+            <img src="img15.png" onclick="openFullImg(this.src, 14)">
+            <img src="img16.png" onclick="openFullImg(this.src, 15)">
+            <img src="img17.png" onclick="openFullImg(this.src, 16)">
+            <img src="colls.png" onclick="openFullImg(this.src, 17)">
+            <img src="img18.png" onclick="openFullImg(this.src, 18)">
+            <img src="img19.png" onclick="openFullImg(this.src, 19)">
+            <img src="img21.png" onclick="openFullImg(this.src, 20)">
+            <img src="img22.png" onclick="openFullImg(this.src, 21)">
+            <img src="img23.png" onclick="openFullImg(this.src, 22)">
+            <img src="img24.png" onclick="openFullImg(this.src, 23)">
+            <img src="img25.png" onclick="openFullImg(this.src, 24)">
+            <img src="img26.jpg" onclick="openFullImg(this.src, 25)">
+            <img src="img27.png" onclick="openFullImg(this.src, 26)">
+            <img src="img28.png" onclick="openFullImg(this.src, 27)">
+            <img src="img29.png" onclick="openFullImg(this.src, 28)">
+            <img src="img30.png" onclick="openFullImg(this.src, 29)">
+            <img src="img31.png" onclick="openFullImg(this.src, 30)">
+            <img src="scara.png" onclick="openFullImg(this.src, 31)">
+            <img src="img11.png" onclick="openFullImg(this.src, 32)">
+            <img src="img12.png" onclick="openFullImg(this.src, 33)">
         </div>
+
     </div>
 
         <section class="wrapper">
