Fri, Aug 11, 2023, 12:04 AM +08:00

--- a/page3.html
+++ b/page3.html
@@ -207,21 +207,22 @@
 
     <div class = "slider">
         <div class="img-gallery">
-            <img src="img2.png" onclick="openFullImg(this.src)">
-            <img src="img4.png" onclick="openFullImg(this.src)">
-            <img src="reneee.png" onclick="openFullImg(this.src)">
-            <img src="colls.png" onclick="openFullImg(this.src)">
-            <img src="img25.png" onclick="openFullImg(this.src)">
-            <img src="img15.png" onclick="openFullImg(this.src)">
-            <img src="img16.png" onclick="openFullImg(this.src)">
-            <img src="img17.png" onclick="openFullImg(this.src)">
-            <img src="jesus (1).png" onclick="openFullImg(this.src)">
-            <img src="img18.png" onclick="openFullImg(this.src)">
-            <img src="img13.png" onclick="openFullImg(this.src)">
-            <img src="jesus (2).png" onclick="openFullImg(this.src)">
-            <img src="img11.png" onclick="openFullImg(this.src)">
-            <img src="cha.png" onclick="openFullImg(this.src)">
+            <img src="img2.png" onclick="openFullImg(this.src, 0)">
+            <img src="img4.png" onclick="openFullImg(this.src, 1)">
+            <img src="reneee.png" onclick="openFullImg(this.src, 2)">
+            <img src="colls.png" onclick="openFullImg(this.src, 3)">
+            <img src="img25.png" onclick="openFullImg(this.src, 4)">
+            <img src="img15.png" onclick="openFullImg(this.src, 5)">
+            <img src="img16.png" onclick="openFullImg(this.src, 6)">
+            <img src="img17.png" onclick="openFullImg(this.src, 7)">
+            <img src="jesus (1).png" onclick="openFullImg(this.src, 8)">
+            <img src="img18.png" onclick="openFullImg(this.src, 9)">
+            <img src="img13.png" onclick="openFullImg(this.src, 10)">
+            <img src="jesus (2).png" onclick="openFullImg(this.src, 11)">
+            <img src="img11.png" onclick="openFullImg(this.src, 12)">
+            <img src="cha.png" onclick="openFullImg(this.src, 13)">
         </div>
+
     </div>
 
 
