Fri, Aug 11, 2023, 2:27 PM +08:00

--- a/page1.html
+++ b/page1.html
@@ -263,8 +263,8 @@
             var currentIndex = 0;
 
             function openFullImg(pic, index) {
+                currentIndex = index;
                 fullImgBox.style.display = "flex";
-                fullImg.src = pic;
             }
 
             function closeFullImg() {
